Don't mess with PCIM_CMD_SERRESPEN and PCIM_CMD_PERRESPEN. This will fix 'NMI RAM parity error' while booting on some machines.

PR: kern/95077
MFC after: 3 days